# oncall-env

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  infra.py  oncall_env.py  scenarios.py
